--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-babel": "^6.1.2",
     "gulp-csscomb": "^3.0.8",
     "gulp-ejs": "^3.0.0",
-    "gulp-sass": "^3.1.0"
+    "gulp-sass": "^3.1.0",
+    "gulp-uglify": "^2.1.2"
   }
 }
