--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "gulp-autoprefixer": "^3.1.1",
     "gulp-babel": "^6.1.2",
     "gulp-csscomb": "^3.0.8",
-    "gulp-ejs": "^3.0.0",
+    "gulp-ejs": "^3.0.1",
+    "gulp-plumber": "^1.1.0",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^2.1.2"
   }
