--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-csscomb": "^3.0.8",
     "gulp-ejs": "^3.0.1",
     "gulp-imagemin": "^3.2.0",
+    "gulp-notify": "^3.0.0",
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^2.1.2"
