--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "gulp-changed": "^3.1.1",
     "gulp-csscomb": "^3.0.8",
     "gulp-ejs": "^3.0.1",
+    "gulp-html-beautify": "^1.0.1",
+    "gulp-ignore": "^2.0.2",
     "gulp-imagemin": "^3.2.0",
     "gulp-notify": "^3.0.0",
     "gulp-plumber": "^1.1.0",
