--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.1",
     "gulp-uglify": "^2.1.2",
+    "gsap": "^1.20.3",
     "imagemin-gifsicle": "^5.2.0",
-    "imagemin-mozjpeg": "^6.0.0",
+    "imagemin-jpegtran": "^5.0.2",
     "imagemin-pngquant": "^5.0.1",
     "imagemin-svgo": "^5.2.2",
     "jquery": "^3.2.1",
