--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "babel-preset-env": "^1.6.0",
     "browser-sync": "^2.18.8",
     "browserify": "^14.4.0",
+    "gsap": "^1.20.3",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-babel": "^7.0.0",
-    "gulp-browserify": "^0.5.1",
     "gulp-changed": "^3.1.1",
     "gulp-csscomb": "^3.0.8",
     "gulp-ejs": "^3.0.1",
@@ -28,13 +28,14 @@
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.1",
     "gulp-uglify": "^2.1.2",
-    "gsap": "^1.20.3",
     "imagemin-gifsicle": "^5.2.0",
     "imagemin-jpegtran": "^5.0.2",
     "imagemin-pngquant": "^5.0.1",
     "imagemin-svgo": "^5.2.2",
     "jquery": "^3.2.1",
     "jquery.easing": "^1.4.1",
-    "picturefill": "^3.0.2"
+    "picturefill": "^3.0.2",
+    "webpack": "^3.10.0",
+    "webpack-stream": "^4.0.0"
   }
 }
