--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.18.8",
     "browserify": "^14.4.0",
-    "gsap": "^1.20.3",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-babel": "^7.0.0",
@@ -35,10 +34,13 @@
     "imagemin-jpegtran": "^5.0.2",
     "imagemin-pngquant": "^5.0.1",
     "imagemin-svgo": "^5.2.2",
-    "jquery": "^3.2.1",
-    "jquery.easing": "^1.4.1",
     "picturefill": "^3.0.2",
     "webpack": "^3.10.0",
     "webpack-stream": "^4.0.0"
+  },
+  "dependencies": {
+    "gsap": "^1.20.3",
+    "jquery": "^3.2.1",
+    "jquery.easing": "^1.4.1"
   }
 }
