--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint src/**/*.js --fix"
   },
   "author": "",
   "license": "ISC",
@@ -14,26 +15,27 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
-    "browser-sync": "^2.18.8",
+    "browser-sync": "^2.23.5",
     "browserify": "^14.4.0",
+    "eslint": "^4.15.0",
+    "eslint-config-google": "^0.9.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-babel": "^7.0.0",
-    "gulp-changed": "^3.1.1",
-    "gulp-csscomb": "^3.0.8",
-    "gulp-ejs": "^3.0.1",
+    "gulp-changed": "^3.2.0",
+    "gulp-ejs": "^3.1.1",
     "gulp-html-beautify": "^1.0.1",
     "gulp-ignore": "^2.0.2",
-    "gulp-imagemin": "^3.2.0",
-    "gulp-notify": "^3.0.0",
-    "gulp-plumber": "^1.1.0",
+    "gulp-imagemin": "^3.4.0",
+    "gulp-notify": "^3.2.0",
+    "gulp-plumber": "^1.2.0",
     "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.6.1",
+    "gulp-sourcemaps": "^2.6.3",
     "gulp-uglify": "^2.1.2",
     "imagemin-gifsicle": "^5.2.0",
     "imagemin-jpegtran": "^5.0.2",
     "imagemin-pngquant": "^5.0.1",
-    "imagemin-svgo": "^5.2.2",
+    "imagemin-svgo": "^5.2.4",
     "picturefill": "^3.0.2",
     "webpack": "^3.10.0",
     "webpack-stream": "^4.0.0"
