--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "aigis": "^0.1.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
@@ -20,6 +21,7 @@
     "eslint": "^4.15.0",
     "eslint-config-google": "^0.9.1",
     "gulp": "^3.9.1",
+    "gulp-aigis": "^1.3.0",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-babel": "^7.0.0",
     "gulp-changed": "^3.2.0",
