--- a/package.json
+++ b/package.json
@@ -4,22 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint src/**/*.js --fix"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "aigis": "^0.1.1",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.23.5",
     "browserify": "^14.4.0",
     "eslint": "^4.15.0",
-    "eslint-config-google": "^0.9.1",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-standard": "^3.1.0",
     "gulp": "^3.9.1",
     "gulp-aigis": "^1.3.0",
     "gulp-autoprefixer": "^3.1.1",
@@ -28,21 +26,20 @@
     "gulp-ejs": "^3.1.1",
     "gulp-html-beautify": "^1.0.1",
     "gulp-ignore": "^2.0.2",
-    "gulp-imagemin": "^3.4.0",
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^1.12.1",
     "gulp-uglify": "^2.1.2",
-    "imagemin-gifsicle": "^5.2.0",
-    "imagemin-jpegtran": "^5.0.2",
-    "imagemin-pngquant": "^5.0.1",
-    "imagemin-svgo": "^5.2.4",
-    "picturefill": "^3.0.2",
     "webpack": "^3.10.0",
     "webpack-stream": "^4.0.0"
   },
   "dependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
     "gsap": "^1.20.3",
     "jquery": "^3.3.1",
     "jquery.easing": "^1.4.1"
