refactor: jquery辞めてみた

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,11 @@
     "document": false,
     "navigator": false,
     "window": false,
-    "$": false
+    "$": false,
+    "TweenMax": false,
+    "TweenLite": false,
+    "Power3": false,
+    "ScrollToPlugin": false
   },
 
   "rules": {
