--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
-    "gsap": "^1.20.3",
-    "jquery": "^3.3.1",
-    "jquery.easing": "^1.4.1"
+    "gsap": "^2.0.1",
+    "jquery": "^3.3.1"
   }
 }
