--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "NODE_ENV=development gulp",
+    "build": "NODE_ENV=production gulp build"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +13,7 @@
     "aigis": "^0.1.1",
     "browser-sync": "^2.23.5",
     "browserify": "^14.4.0",
+    "del": "^3.0.0",
     "eslint": "^4.15.0",
     "eslint-config-standard": "^11.0.0",
     "eslint-plugin-import": "^2.12.0",
@@ -21,16 +23,15 @@
     "gulp": "^3.9.1",
     "gulp-aigis": "^1.3.0",
     "gulp-autoprefixer": "^3.1.1",
-    "gulp-babel": "^7.0.0",
-    "gulp-changed": "^3.2.0",
     "gulp-ejs": "^3.1.1",
     "gulp-html-beautify": "^1.0.1",
     "gulp-ignore": "^2.0.2",
+    "gulp-mode": "^1.0.2",
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^1.12.1",
-    "gulp-uglify": "^2.1.2",
+    "run-sequence": "^2.2.1",
     "webpack": "^3.10.0",
     "webpack-stream": "^4.0.0"
   },
