--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "NODE_ENV=development gulp",
-    "build": "NODE_ENV=production gulp build"
+    "build": "NODE_ENV=production gulp build",
+    "lint": "eslint --ext .js --ignore-path .gitignore .",
+    "format": "prettier-eslint --write \"./**/*.js\" \"./**/*.scss\" --ignore \"./node_modules/**\""
   },
   "author": "",
   "license": "ISC",
