--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "NODE_ENV=development gulp",
     "build": "NODE_ENV=production gulp build",
-    "lint": "eslint --ext .js --ignore-path .gitignore .",
+    "lint": "eslint --ext .js --ignore-path .gitignore --ignore-pattern gulpfile.js .",
     "format": "prettier-eslint --write \"./**/*.js\" \"./**/*.scss\" --ignore \"./node_modules/**\""
   },
   "author": "",
