--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "aigis": "^0.1.1",
+    "autoprefixer": "^9.3.1",
     "browser-sync": "^2.23.5",
     "browserify": "^14.4.0",
     "del": "^3.0.0",
@@ -31,6 +32,7 @@
     "gulp-mode": "^1.0.2",
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.0",
+    "gulp-postcss": "^8.0.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^1.12.1",
     "run-sequence": "^2.2.1",
