--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "gulp-postcss": "^8.0.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^1.12.1",
+    "prettier": "^1.14.3",
+    "prettier-eslint": "^8.8.2",
+    "prettier-eslint-cli": "^4.7.1",
     "run-sequence": "^2.2.1",
     "webpack": "^3.10.0",
     "webpack-stream": "^4.0.0"
