--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "gulp-aigis": "^1.3.0",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-ejs": "^3.1.1",
+    "gulp-header": "^2.0.5",
     "gulp-html-beautify": "^1.0.1",
     "gulp-ignore": "^2.0.2",
     "gulp-mode": "^1.0.2",
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.0",
     "gulp-postcss": "^8.0.0",
+    "gulp-replace": "^1.0.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^1.12.1",
     "prettier": "^1.14.3",
