--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@babel/preset-env": "^7.1.6",
     "babel-loader": "^8.0.4",
     "gsap": "^2.0.1",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "platform": "^1.3.5"
   }
 }
