--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "scripts": {
     "dev": "NODE_ENV=development gulp",
     "build": "NODE_ENV=production gulp build",
-    "lint": "eslint --ext .js --ignore-path .gitignore --ignore-pattern gulpfile.js .",
-    "format": "prettier-eslint --write \"./**/*.js\" \"./**/*.scss\" --ignore \"./node_modules/**\""
+    "lint": "eslint --ext .js --ignore-path .gitignore --ignore-pattern gulpfile.js ."
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
     "aigis": "^0.1.1",
     "autoprefixer": "^9.3.1",
+    "babel-loader": "^8.0.4",
     "browser-sync": "^2.23.5",
     "browserify": "^14.4.0",
     "del": "^3.0.0",
@@ -41,13 +43,11 @@
     "prettier": "^1.14.3",
     "prettier-eslint": "^8.8.2",
     "prettier-eslint-cli": "^4.7.1",
+    "prettier-webpack-plugin": "^1.2.0",
     "webpack": "^4.25.1",
     "webpack-stream": "^5.1.1"
   },
   "dependencies": {
-    "@babel/core": "^7.1.6",
-    "@babel/preset-env": "^7.1.6",
-    "babel-loader": "^8.0.4",
     "gsap": "^2.0.1",
     "jquery": "^3.3.1",
     "platform": "^1.3.5"
