--- a/package.json
+++ b/package.json
@@ -11,45 +11,47 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.2.3",
-    "aigis": "^0.1.1",
-    "autoprefixer": "^9.3.1",
-    "babel-loader": "^8.0.4",
-    "browser-sync": "^2.23.5",
-    "browserify": "^14.4.0",
-    "del": "^3.0.0",
-    "eslint": "^4.15.0",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.7.0",
-    "eslint-plugin-standard": "^3.1.0",
-    "gulp": "^4.0.0",
-    "gulp-aigis": "^1.3.0",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-ejs": "^3.1.1",
-    "gulp-header": "^2.0.5",
+    "@babel/core": "^7.11.1",
+    "@babel/preset-env": "^7.11.0",
+    "@types/jquery": "^3.5.1",
+    "autoprefixer": "^9.8.6",
+    "babel-loader": "^8.1.0",
+    "browser-sync": "^2.26.12",
+    "browserify": "^16.5.2",
+    "del": "^5.1.0",
+    "eslint": "^7.6.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-ejs": "^5.1.0",
+    "gulp-header": "^2.0.9",
     "gulp-html-beautify": "^1.0.1",
-    "gulp-ignore": "^2.0.2",
+    "gulp-ignore": "^3.0.0",
     "gulp-mode": "^1.0.2",
     "gulp-notify": "^3.2.0",
-    "gulp-plumber": "^1.2.0",
+    "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^8.0.0",
+    "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.0.0",
-    "gulp-sass": "^4.0.2",
-    "gulp-sass-glob": "^1.0.9",
-    "gulp-sourcemaps": "^1.12.1",
-    "prettier": "^1.14.3",
-    "prettier-eslint": "^8.8.2",
-    "prettier-eslint-cli": "^4.7.1",
+    "gulp-sass": "^4.1.0",
+    "gulp-sass-glob": "^1.1.0",
+    "gulp-sourcemaps": "^2.6.5",
+    "prettier": "^2.0.5",
     "prettier-webpack-plugin": "^1.2.0",
-    "webpack": "^4.25.1",
-    "webpack-stream": "^5.1.1"
+    "webpack": "^4.44.1",
+    "webpack-stream": "^5.2.1"
   },
   "dependencies": {
-    "gsap": "^2.0.1",
-    "jquery": "^3.3.1",
-    "platform": "^1.3.5"
+    "@barba/core": "^2.9.7",
+    "core-js": "^3.6.5",
+    "gsap": "^3.4.2",
+    "jquery": "^3.5.1",
+    "ua-parser-js": "^0.7.21"
   }
 }
